--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     background-color: aliceblue;
-    vertical-align: middle;
-    display: inline;
+    margin-left: 0 auto;
 
 }
 
@@ -11,5 +10,20 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+div {
+    max-width: 700px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;   
+}
+
+h1, h2, h3, h4 {
+    display: block;
+    margin-left: auto;   
+    margin-right: auto;
+    font-size: 25px;
+    font-weight: bold
 }
 
